[package]
name = "llvm-model"
description = "A safer library to help with generation of LLVM IR"
repository = "https://github.com/davnavr/llvm-model"
version = "0.1.0"
edition = "2021"
keywords = ["llvm"]
readme = "README.md"

[dependencies]
thiserror = "1.0.30"
lazy_static = "1.4.0"
llvm-sys = { version = "130", optional = true }

[features]
llvm_sys_interop = [ "llvm-sys" ]
